TestSuite/Verification/Error/Serial/Inlining/DoInlineTest.par
DoInlineTest{

seq toInline([Int] input) : Int {
    return #input
}

seq main() : Int {
    var [Int] a = init_List([2])
    
    toInline(a)
    
return 0 
}}